bk_ida/gccida/c3/oprs_not_set_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3256:4: error: expected ';' after expression
rtx v5; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3256:5: error: use of undeclared identifier 'v5'
rtx v5; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3278:1: error: use of undeclared identifier 'v5'
v5 = modify_mem_list[*( int *)( basic_block_for_insn->data.l[rtint] + 88)]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3279:6: error: use of undeclared identifier 'v5'
if ( v5 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3281:20: error: use of undeclared identifier 'uid_cuid_1'
v6 = *( ( _DWORD *)uid_cuid_1 + rtint); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3282:23: error: use of undeclared identifier 'v5'
v7.rtwint = ( __int64)v5->fld[0]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3283:20: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + *( int *)( v7.rtwint + 8)) > v6 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3291:22: error: expected expression
note_stores( *( rtx *)( v7.rtwint + 32), mems_conflict_for_gcse_p, 0LL); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3297:1: error: use of undeclared identifier 'v5'
v5 = ( rtx)v5[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3298:7: error: use of undeclared identifier 'v5'
if ( !v5 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3300:23: error: use of undeclared identifier 'v5'
v7.rtwint = ( __int64)v5->fld[0]; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3301:20: error: use of undeclared identifier 'uid_cuid_1'
if ( *( ( _DWORD *)uid_cuid_1 + *( int *)( v7.rtwint + 8)) <= v6 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3329:32: error: expected expression
v8 = oprs_not_set_p( *( ( rtx *)rtx + v13), insn); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/gcse.c:3344:33: error: expected expression
while ( oprs_not_set_p( *( rtx *)&v15[2 * v16 + 2], insn) ) 
                                ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/oprs_not_set_p/src/obj/gcse.o] Error 1
